--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
     "expo": "~49.0.8",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
